<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_no_game_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_game_error"
                android:textAlignment="center"
                android:textColor="@color/red" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/edittext_player_name"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/join_name" />

            <TextView
                android:id="@+id/text_no_place_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_place_error"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_join_game_confirm"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:text="@string/join_join" />
        </LinearLayout>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="0"
            android:text="@string/cancel" />

    </LinearLayout>

</layout>