<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/edittext_number_of_players"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/create_number_of_players"
                android:inputType="number" />

            <Button
                android:id="@+id/button_create_game"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_create" />
        </LinearLayout>

        <Button
        android:id="@+id/button_cancel"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="0"
        android:text="@string/cancel" />

    </LinearLayout>


</layout>
