<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_game_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_players"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/layout_new_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:labelFor="@+id/edittext_question_points"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:text="@string/lobby_question_points" />

            <EditText
                android:id="@+id/edittext_question_points"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberSigned"
                android:text="@string/default_question_point" />

            <Button
                android:id="@+id/button_new_question_confirm"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:text="@string/lobby_new_question"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_end_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lobby_end_game"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</layout>