<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<TextView
    android:id="@+id/textview_number_of_players"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/players_numbers"
    android:textAlignment="center" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_players_qualified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players_qualified"
            android:textAlignment="viewStart" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_qualified_players"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80dp" />

        <TextView
            android:id="@+id/textview_players_remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players_remaining"
            android:textAlignment="viewStart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_players"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>
</ScrollView>
    </LinearLayout>
