<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_game_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_game_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textview_question_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_players"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_player_answering"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/textview_player_answering"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        tools:text="pierre" />

                    <TextView
                        android:id="@+id/textview_player_countdown"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:textAlignment="center"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        tools:text="4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_good_answer"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="12dp"
                            android:backgroundTint="@color/green"
                            android:text="@string/yes_button"
                            android:visibility="visible"
                            app:cornerRadius="50dp" />

                        <Button
                            android:id="@+id/button_wrong_answer"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="12dp"
                            android:backgroundTint="@color/red"
                            android:text="@string/no_button"
                            android:visibility="visible"
                            app:cornerRadius="50dp" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button_top"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/top_button"
                    android:textSize="34sp"
                    android:visibility="visible"
                    app:cornerRadius="64dp"
                    tools:visibility="gone" />

                <TextView
                    android:id="@+id/textview_countdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="96sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="20"
                    tools:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
